tests/NormalTests/paczka1/small_fuzzy/40338722.err
Error in line 2: 1SrM S20 81,2
Error in line 6: AN6HR S849 61,6
Error in line 12: Sh5rk9XBm0S2044,3
